--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-Set-Content -Path .gitignore -Value @"
 # --- ENV FILES (IMPORTANT — NEVER COMMIT) ---
 .env
 .env.local
@@ -10,10 +9,13 @@ Set-Content -Path .gitignore -Value @"
 # --- Node modules ---
 node_modules/
 **/node_modules/
+backend/node_modules/
+frontend/node_modules/
 
 # --- Vite build ---
 dist/
 .build/
+frontend/dist/
 
 # --- Logs ---
 npm-debug.log*
@@ -31,5 +33,4 @@ Thumbs.db
 
 # --- Uploads / temp ---
 uploads/
-"@
-
+backend/uploads/
